--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,6 +1,25 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-/* Nexus CSSインポート */
-@import "nexus/main.css";
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700;800;1000&display=swap");
+
+
+:root {
+    --body-font-family: "DM Sans", sans-serif;
+}
+
+body {
+    font-family: var(--body-font-family), serif;
+}
+
+/* Custom Styling */
+@import "custom/_animation.css";
+@import "custom/_components.css";
+@import "custom/_forms.css";
+@import "custom/_layout.css";
+
+/* Plugin Overriding */
+@import "plugins/_filepond.css";
+@import "plugins/_apexcharts.css";
+@import "plugins/_select.css";
