--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,18 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
+    <link rel="shortcut icon"
+          href="logo/favicon-dark.png"
+          media="(prefers-color-scheme: dark)" />
+    <link rel="shortcut icon"
+          href="logo/favicon-light.png"
+          media="(prefers-color-scheme: light)" />
+
+    <script>
+      try {
+        document.documentElement.setAttribute("data-theme", JSON.parse(localStorage.getItem("__NEXUS__HTML__ADMIN__LAYOUT__")).theme)
+      } catch (e) {}
+    </script>
   </head>
 
   <body>
