--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,117 @@
-<h2>Change your password</h2>
+<% content_for :title, "Reset Password - Parts Sync" %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+<div class="grid min-h-screen grid-cols-12 overflow-auto">
+  <div class="relative hidden bg-[#FFE9D1] dark:bg-[#14181c] lg:col-span-7 lg:block xl:col-span-8 2xl:col-span-9">
+    <div class="absolute inset-0 flex items-center justify-center">
+      <%= image_tag "auth/auth-hero.png", alt: "Auth Image", loading: "lazy", class: "object-cover" %>
+    </div>
+    <div class="animate-bounce-2 absolute bottom-[15%] right-[20%]">
+      <div aria-label="Card" class="card card-bordered w-64 bg-base-100/80 backdrop-blur-lg">
+        <div class="card-body p-6">
+          <div class="flex flex-col items-center justify-center">
+            <%= image_tag "landing/testimonial-pouya-avatar.png", alt: "", loading: "lazy", class: "mask mask-squircle size-11 bg-base-content/10 p-0.5" %>
+            <div class="mt-2 flex items-center justify-center gap-0.5">
+              <% 5.times do %>
+                <iconify-icon icon="lucide:star" height="12" class="text-orange-400"></iconify-icon>
+              <% end %>
+            </div>
+            <p class="mt-2 text-sm font-medium">Pouya Saadeghi</p>
+            <p class="text-xs text-base-content/70">Creator of daisyUI</p>
+          </div>
+          <p class="text-center text-sm text-base-content/90">
+            This is the ultimate admin dashboard for any project
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+  <div class="col-span-12 lg:col-span-5 xl:col-span-4 2xl:col-span-3">
+    <div class="flex flex-col items-stretch p-6 md:p-8 lg:p-16">
+      <div class="flex items-center justify-between">
+        <div class="inline">
+          <%= image_tag "logo/logo-dark.svg", alt: "logo-dark", loading: "lazy", class: "hidden dark:inline h-6" %>
+          <%= image_tag "logo/logo-light.svg", alt: "logo-light", loading: "lazy", class: "inline dark:hidden h-6" %>
+        </div>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
+        <button aria-label="Theme toggle" data-action="theme-toggle" class="btn btn-circle btn-ghost border border-base-content/10 text-base-content/70 hover:bg-base-content/10">
+          <iconify-icon icon="lucide:sun" height="20" class="hidden dark:inline"></iconify-icon>
+          <iconify-icon icon="lucide:moon" height="20" class="inline dark:hidden"></iconify-icon>
+        </button>
+      </div>
 
-<%= render "devise/shared/links" %>
+      <h3 class="mt-8 text-center text-xl font-semibold md:mt-12 lg:mt-24">Reset Password</h3>
+      <h3 class="mt-2 text-center text-sm text-base-content/70">
+        Seamless Access, Secure Connection: Your Gateway to a Personalized Experience.
+      </h3>
+
+      <div class="mt-6 md:mt-10">
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+          <%= f.hidden_field :reset_password_token %>
+
+          <div class="form-control">
+            <%= f.label :password, "New password", class: "label" do %>
+              <span class="label-text cursor-pointer">New Password</span>
+            <% end %>
+            <div class="form-control flex flex-row items-center rounded-box border border-base-content/20 pe-3 ps-3" data-component="password-field">
+              <iconify-icon icon="lucide:key-round" height="18" class="text-base-content/80"></iconify-icon>
+              <%= f.password_field :password, autofocus: true, autocomplete: "new-password", placeholder: "Password",
+                  class: "input input-sm w-full transition-all focus:border-transparent focus:outline-0 focus:outline-offset-0",
+                  data: { slot: "input" } %>
+              <button type="button" data-slot-value="hide" data-slot="visibility-toggle"
+                      aria-label="Show/Hide password" class="group btn btn-circle btn-ghost btn-xs hover:bg-base-content/10">
+                <iconify-icon icon="lucide:eye" height="16" class="inline text-base-content/80 group-data-[slot-value=show]:hidden"></iconify-icon>
+                <iconify-icon icon="lucide:eye-off" height="16" class="inline text-base-content/80 group-data-[slot-value=hide]:hidden"></iconify-icon>
+              </button>
+            </div>
+            <% if @minimum_password_length %>
+              <label class="label">
+                <span class="label-text-alt text-base-content/70">
+                  <%= @minimum_password_length %> characters minimum
+                </span>
+              </label>
+            <% end %>
+          </div>
+
+          <div class="form-control mt-3">
+            <%= f.label :password_confirmation, "Confirm new password", class: "label" do %>
+              <span class="label-text cursor-pointer">Confirm Password</span>
+            <% end %>
+            <div class="form-control flex flex-row items-center rounded-box border border-base-content/20 pe-3 ps-3" data-component="password-field">
+              <iconify-icon icon="lucide:key-round" height="18" class="text-base-content/80"></iconify-icon>
+              <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Confirm Password",
+                  class: "input input-sm w-full transition-all focus:border-transparent focus:outline-0 focus:outline-offset-0",
+                  data: { slot: "input" } %>
+              <button type="button" data-slot-value="hide" data-slot="visibility-toggle"
+                      aria-label="Show/Hide password" class="group btn btn-circle btn-ghost btn-xs hover:bg-base-content/10">
+                <iconify-icon icon="lucide:eye" height="16" class="inline text-base-content/80 group-data-[slot-value=show]:hidden"></iconify-icon>
+                <iconify-icon icon="lucide:eye-off" height="16" class="inline text-base-content/80 group-data-[slot-value=hide]:hidden"></iconify-icon>
+              </button>
+            </div>
+          </div>
+
+          <div class="mt-4 flex items-center gap-3 md:mt-6">
+            <%= f.check_box :agreement, class: "checkbox-primary checkbox checkbox-xs" %>
+            <%= f.label :agreement do %>
+              I agree with
+              <span class="cursor-pointer text-primary underline">terms and conditions</span>
+            <% end %>
+          </div>
+
+          <div class="mt-4 md:mt-6">
+            <%= f.submit "Change Password", class: "btn btn-primary btn-block gap-2 text-base" do %>
+              <iconify-icon icon="lucide:check" height="16"></iconify-icon>
+              Change Password
+            <% end %>
+          </div>
+        <% end %>
+
+        <p class="mt-4 text-center text-sm text-base-content/80 md:mt-6">
+          Go to
+          <%= link_to "Log in", new_session_path(resource_name), class: "text-primary hover:underline" %>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
