--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,93 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="grid min-h-screen grid-cols-12 overflow-auto">
+  <!--  Start: Forgot Password Side Image Panel -->
+  <div class="relative hidden bg-[#FFE9D1] dark:bg-[#14181c] lg:col-span-7 lg:block xl:col-span-8 2xl:col-span-9">
+    <div class="absolute inset-0 flex items-center justify-center">
+      <%= image_tag('auth/auth-hero.png', alt: "Auth Image", loading: "lazy", width: 1000, height: 667, class: "object-cover") %>
+    </div>
+    <div class="animate-bounce-2 absolute bottom-[15%] right-[20%]">
+      <div aria-label="Card" class="card card-bordered w-64 bg-base-100/80 backdrop-blur-lg">
+        <div class="card-body p-6">
+          <div class="flex flex-col items-center justify-center">
+            <%= image_tag('landing/testimonial-pouya-avatar.png', alt: "", loading: "lazy", width: 460, height: 460, class: "mask mask-squircle size-11 bg-base-content/10 p-0.5") %>
+            <div class="mt-2 flex items-center justify-center gap-0.5">
+              <iconify-icon icon="lucide:star" height="12" class="text-orange-400"></iconify-icon>
+              <iconify-icon icon="lucide:star" height="12" class="text-orange-400"></iconify-icon>
+              <iconify-icon icon="lucide:star" height="12" class="text-orange-400"></iconify-icon>
+              <iconify-icon icon="lucide:star" height="12" class="text-orange-400"></iconify-icon>
+              <iconify-icon icon="lucide:star" height="12" class="text-orange-400"></iconify-icon>
+            </div>
+            <p class="mt-2 text-sm font-medium">Pouya Saadeghi</p>
+            <p class="text-xs text-base-content/70">Creator of daisyUI</p>
+          </div>
+          <p class="text-center text-sm text-base-content/90">
+            This is the ultimate admin dashboard for any React project
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
+  <!--  End: Forgot Password Side Image Panel -->
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+  <div class="col-span-12 lg:col-span-5 xl:col-span-4 2xl:col-span-3">
+    <div class="flex flex-col items-stretch p-8 lg:p-16">
+      <div class="flex items-center justify-between">
+        <!--  Start: Logo -->
+        <div class="inline">
+          <%= image_tag('logo/logo-dark.svg', alt: "logo-dark", loading: "lazy", width: 86, height: 24, class: "hidden dark:inline") %>
+          <%= image_tag('logo/logo-light.svg', alt: "logo-light", loading: "lazy", width: 86, height: 24, class: "inline dark:hidden") %>
+        </div>
+        <!--  End: Logo -->
+
+        <!--  Start: Theme Toggle -->
+        <button
+          aria-label="Theme toggle"
+          data-action="theme-toggle"
+          class="btn btn-circle btn-ghost border border-base-content/10 text-base-content/70 hover:bg-base-content/10">
+          <iconify-icon icon="lucide:sun" height="20" class="hidden dark:inline"></iconify-icon>
+          <iconify-icon icon="lucide:moon" height="20" class="inline dark:hidden"></iconify-icon>
+        </button>
+        <!--  End: Theme Toggle -->
+      </div>
+      <h3 class="mt-8 text-center text-xl font-semibold md:mt-12 lg:mt-24">Forgot Password</h3>
+      <h3 class="mt-2 text-center text-sm text-base-content/70">
+        Seamless Access, Secure Connection: Your Gateway to a Personalized Experience.
+      </h3>
+      <div class="mt-6 md:mt-10">
+        <!--  Start: Forgot Password Form -->
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+          <div class="form-control">
+            <label for="email" class="label">
+              <span class="label-text cursor-pointer">Email Address</span>
+            </label>
+            <div class="form-control flex flex-row items-center rounded-box border border-base-content/20 ps-3">
+              <iconify-icon icon="lucide:mail" height="18" class="text-base-content/80"></iconify-icon>
+              <%= f.email_field :email, placeholder: "Email Address", class: "input input-sm w-full transition-all focus:border-transparent focus:outline-0 focus:outline-offset-0", id: "email" %>
+            </div>
+          </div>
+          <div class="mt-4 flex items-center gap-3 md:mt-6">
+            <input
+              id="agreement"
+              class="checkbox-primary checkbox checkbox-xs"
+              type="checkbox"
+              name="agreement" />
+            <label for="agreement">
+              I agree with
+              <span class="cursor-pointer text-primary underline">terms and conditions</span>
+            </label>
+          </div>
+
+          <!--  End: Forgot Password Form -->
+
+          <div class="mt-4 md:mt-6">
+            <%= f.submit 'Send a reset link', class: "btn btn-primary btn-block gap-2 text-base" %>
+          </div>
+        <% end %>
+
+        <p class="mt-4 text-center text-sm text-base-content/80 md:mt-6">
+          I have already to
+          <%= link_to "Login", new_session_path(resource_name), class: "text-primary hover:underline" %>
+        </p>
+      </div>
+    </div>
   </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
