国際化対応

--- a/app/views/components/navigation/_header_nav_items.html.erb
+++ b/app/views/components/navigation/_header_nav_items.html.erb
@@ -1,6 +1,6 @@
 <li>
-  <%= link_to "レポート", sales_reports_path, class: "hover:bg-base-content/15" %>
+  <%= link_to t('shared.header.reports'), sales_reports_path, class: "hover:bg-base-content/15" %>
 </li>
-<li>
-  <%= link_to "PLレポート", plreports_path, class: "hover:bg-base-content/15" %>
+<li></li>
+  <%= link_to t('shared.header.pl_report'), plreports_path, class: "hover:bg-base-content/15" %>
 </li>
