--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "Register - Nexus (HTML - DaisyUI)" %>
+<% content_for :title, t('devise.registrations.new.title') %>
 
 <div class="grid min-h-screen grid-cols-12 overflow-auto">
   <!--  Start: Register Side Image Panel -->
@@ -48,9 +48,11 @@
         <!--  End: Theme Toggle -->
       </div>
 
-      <h3 class="mt-8 text-center text-xl font-semibold md:mt-12 lg:mt-24">Register</h3>
+      <h3 class="mt-8 text-center text-xl font-semibold md:mt-12 lg:mt-24">
+        <%= t('devise.registrations.new.sign_up') %>
+      </h3>
       <h3 class="mt-2 text-center text-sm text-base-content/70">
-        Seamless Access, Secure Connection: Your Gateway to a Personalized Experience.
+        <%= t('devise.registrations.new.welcome_message') %>
       </h3>
 
       <div class="mt-6 md:mt-10">
@@ -66,43 +68,45 @@
 
         <!--  Start: Register Form -->
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-          <div class="grid grid-cols-1 gap-5 md:grid-cols-2">
+          <div class="grid grid-cols-2 gap-3">
             <div class="form-control">
-              <%= f.label :first_name, class: "label" do %>
-                <span class="label-text cursor-pointer">First Name</span>
-              <% end %>
-              <div class="form-control flex flex-row items-center rounded-box border border-base-content/20 ps-3">
-                <iconify-icon icon="lucide:user" class="text-base-content/80"></iconify-icon>
-                <%= f.text_field :first_name, placeholder: "First Name", class: "input input-sm w-full transition-all focus:border-transparent focus:outline-0 focus:outline-offset-0" %>
-              </div>
-            </div>
-            <div class="form-control">
-              <%= f.label :last_name, class: "label" do %>
-                <span class="label-text cursor-pointer">Last Name</span>
-              <% end %>
+              <%= f.label :first_name, t('activerecord.attributes.user.first_name'), class: "label" %>
               <div class="form-control flex flex-row items-center rounded-box border border-base-content/20 ps-3">
                 <iconify-icon icon="lucide:user" class="text-base-content/80 w-4 h-4"></iconify-icon>
-                <%= f.text_field :last_name, placeholder: "Last Name", class: "input input-sm w-full transition-all focus:border-transparent focus:outline-0 focus:outline-offset-0" %>
+                <%= f.text_field :first_name,
+                    placeholder: t('activerecord.attributes.user.first_name'),
+                    class: "input input-sm w-full transition-all focus:border-transparent focus:outline-0 focus:outline-offset-0" %>
               </div>
             </div>
-          </div>
-          <div class="form-control mt-3">
-            <%= f.label :email, class: "label" do %>
-              <span class="label-text cursor-pointer">Email Address</span>
-            <% end %>
-            <div class="form-control flex flex-row items-center rounded-box border border-base-content/20 ps-3">
-              <iconify-icon icon="lucide:mail" class="text-base-content/80 w-4 h-4"></iconify-icon>
-              <%= f.email_field :email, placeholder: "Email Address", class: "input input-sm w-full transition-all focus:border-transparent focus:outline-0 focus:outline-offset-0" %>
+
+            <div class="form-control">
+              <%= f.label :last_name, t('activerecord.attributes.user.last_name'), class: "label" %>
+              <div class="form-control flex flex-row items-center rounded-box border border-base-content/20 ps-3">
+                <iconify-icon icon="lucide:user" class="text-base-content/80 w-4 h-4"></iconify-icon>
+                <%= f.text_field :last_name,
+                    placeholder: t('activerecord.attributes.user.last_name'),
+                    class: "input input-sm w-full transition-all focus:border-transparent focus:outline-0 focus:outline-offset-0" %>
+              </div>
             </div>
           </div>
 
           <div class="form-control mt-3">
-            <%= f.label :password, class: "label" do %>
-              <span class="label-text">Password</span>
-            <% end %>
+            <%= f.label :email, t('activerecord.attributes.user.email'), class: "label" %>
+            <div class="form-control flex flex-row items-center rounded-box border border-base-content/20 ps-3">
+              <iconify-icon icon="lucide:mail" class="text-base-content/80 w-4 h-4"></iconify-icon>
+              <%= f.email_field :email,
+                  placeholder: t('activerecord.attributes.user.email'),
+                  class: "input input-sm w-full transition-all focus:border-transparent focus:outline-0 focus:outline-offset-0" %>
+            </div>
+          </div>
+
+          <div class="form-control mt-3">
+            <%= f.label :password, t('activerecord.attributes.user.password'), class: "label" %>
             <div class="form-control flex flex-row items-center rounded-box border border-base-content/20 pe-3 ps-3" data-component="password-field">
               <iconify-icon icon="lucide:key-round" class="text-base-content/80 w-4 h-4"></iconify-icon>
-              <%= f.password_field :password, placeholder: "Password", class: "input input-sm w-full transition-all focus:border-transparent focus:outline-0 focus:outline-offset-0" %>
+              <%= f.password_field :password,
+                  placeholder: t('activerecord.attributes.user.password'),
+                  class: "input input-sm w-full transition-all focus:border-transparent focus:outline-0 focus:outline-offset-0" %>
               <button id="toggle_password_field_type" type="button" data-slot-value="hide" data-slot="visibility-toggle" aria-label="Show/Hide password" class="group btn btn-circle btn-ghost btn-xs hover:bg-base-content/10">
                 <iconify-icon icon="lucide:eye" class="inline text-base-content/80 w-4 h-4 group-data-[slot-value=show]:hidden"></iconify-icon>
                 <iconify-icon icon="lucide:eye-off" class="inline text-base-content/80 w-4 h-4 group-data-[slot-value=hide]:hidden"></iconify-icon>
@@ -113,13 +117,13 @@
           <div class="mt-4 flex items-center gap-3 md:mt-6">
             <%= f.check_box :agreement, class: "checkbox-primary checkbox checkbox-xs" %>
             <%= f.label :agreement do %>
-              I agree with
-              <span class="cursor-pointer text-primary underline">terms and conditions</span>
+              <%= t('devise.registrations.new.terms_html') %>
             <% end %>
           </div>
 
           <div class="mt-4 md:mt-6">
-            <%= f.submit "Register", class: "btn btn-primary btn-block gap-2 text-base" %>
+            <%= f.submit t('devise.registrations.new.sign_up'),
+                class: "btn btn-primary btn-block gap-2 text-base" %>
           </div>
         <% end %>
         <!--  End: Register Form -->
@@ -128,14 +132,18 @@
           <!--  Start: Social Google Register -->
           <button class="btn btn-outline btn-md btn-block flex items-center gap-3 border-base-content/10 !text-base-content hover:border-transparent hover:bg-base-content/10">
             <%= image_tag 'brand-logo/google-mini.svg', alt: '', loading: 'lazy', class: 'w-6 h-6' %>
-            <span class="text-base">Register with Google</span>
+            <span class="text-base">
+              <%= t('devise.shared.links.sign_up_with_provider', provider: 'Google') %>
+            </span>
           </button>
           <!--  End: Social Google Register -->
         </div>
 
         <p class="mt-4 text-center text-sm text-base-content/80 md:mt-6">
-          I have already to
-          <%= link_to "Login", new_user_session_path, class: "text-primary hover:underline" %>
+          <%= t('devise.registrations.new.have_account') %>
+          <%= link_to t('devise.shared.links.sign_in'),
+              new_session_path(resource_name),
+              class: "text-primary hover:underline" %>
         </p>
       </div>
     </div>
