レポートを円表記に変換

--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -10,10 +10,10 @@
 
 <%# ファビコン %>
 <link rel="shortcut icon"
-      href="logo/favicon-dark.png"
+      href="/logo/favicon-dark.png"
       media="(prefers-color-scheme: dark)" />
 <link rel="shortcut icon"
-      href="logo/favicon-light.png"
+      href="/logo/favicon-light.png"
       media="(prefers-color-scheme: light)" />
 
 <%# テーマ設定のスクリプト %>
