--- a/app/views/components/navigation/_leftbar.html.erb
+++ b/app/views/components/navigation/_leftbar.html.erb
@@ -1,43 +1,90 @@
+<%# サイドバー %>
 <div class="leftmenu-wrapper">
-  <%= link_to root_path, class: "flex h-16 items-center justify-center" do %>
+  <%= link_to "#", class: "flex h-16 items-center justify-center" do %>
     <div class="inline">
-      <%= image_tag "logo/logo-dark.svg", alt: "logo-dark", class: "hidden h-6 dark:inline" %>
-      <%= image_tag "logo/logo-light.svg", alt: "logo-light", class: "inline h-6 dark:hidden" %>
+      <%= image_tag "logo/logo-dark.png",
+          alt: "logo-dark",
+          loading: "lazy",
+          class: "hidden h-6 dark:inline" %>
+      <%= image_tag "logo/logo-light.png",
+          alt: "logo-light",
+          loading: "lazy",
+          class: "inline h-6 dark:hidden" %>
     </div>
   <% end %>
 
   <div data-simplebar class="h-[calc(100vh-64px)] lg:h-[calc(100vh-230px)]">
     <ul class="menu mb-6">
-      <li class="menu-title font-semibold"><%= t('shared.navigation.reports') %></li>
+      <%# ダッシュボード %>
+      <li class="mb-0.5">
+        <%= link_to "#", class: "hover:bg-base-content/15" do %>
+          <div class="flex items-center gap-2">
+            <iconify-icon icon="lucide:airplay" height="18"></iconify-icon>
+            Dashboard
+          </div>
+        <% end %>
+      </li>
 
+      <%# アプリケーション %>
+      <li class="menu-title font-semibold">Apps</li>
       <li class="mb-0.5">
         <details>
           <summary>
             <div class="flex items-center gap-2">
-              <iconify-icon icon="lucide:chart-bar" height="18"></iconify-icon>
-              <%= t('shared.header.sales_report') %>
+              <iconify-icon icon="lucide:store" height="18"></iconify-icon>
+              Ecommerce
             </div>
           </summary>
           <ul>
             <li class="mb-0.5">
-              <%= link_to sales_reports_path, class: "hover:bg-base-content/15" do %>
+              <%= link_to "#", class: "hover:bg-base-content/15" do %>
                 <div class="flex items-center gap-2">
-                  <%= t('reports.sales.title') %>
+                  Orders
                 </div>
               <% end %>
             </li>
             <li class="mb-0.5">
-              <%= link_to plreports_path, class: "hover:bg-base-content/15" do %>
+              <%= link_to "#", class: "hover:bg-base-content/15" do %>
                 <div class="flex items-center gap-2">
-                  <%= t('reports.pl.title') %>
+                  Products
+                </div>
+              <% end %>
+            </li>
+            <li class="mb-0.5">
+              <%= link_to "#", class: "hover:bg-base-content/15" do %>
+                <div class="flex items-center gap-2">
+                  Customers
                 </div>
               <% end %>
             </li>
           </ul>
         </details>
       </li>
+
+      <%# 設定 %>
+      <li class="menu-title font-semibold">Settings</li>
+      <li class="mb-0.5">
+        <%= link_to "#", class: "hover:bg-base-content/15" do %>
+          <div class="flex items-center gap-2">
+            <iconify-icon icon="lucide:settings" height="18"></iconify-icon>
+            Settings
+          </div>
+        <% end %>
+      </li>
     </ul>
+  </div>
+
+  <%# プロモーションエリア %>
+  <div class="mx-4 hidden rounded bg-base-200 px-3 py-4 lg:block">
+    <p class="text-center text-base font-medium">Need Help?</p>
+    <p class="mt-3 text-center text-sm">Contact our support team</p>
+    <div class="mt-3 text-center">
+      <%= link_to "#", target: "_blank" do %>
+        <button class="btn btn-primary btn-sm">Contact</button>
+      <% end %>
+    </div>
   </div>
 </div>
 
-<div class="leftbar-backdrop"></div>
+<%# バックドロップ %>
+<div class="leftbar-backdrop hidden"></div>
